--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>AirBnB clone</title>
-	</head>
-	<body style="margin: 0; padding: 0;">
-		<header style="margin: 0; padding: 0;"> 
-		</header>
-		<footer style="color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0;">
-			<span style="vertical-align: middle;">Best School</span>
-		</footer>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB clone</title>
+    </head>
+    <body style="padding: 0; margin: 0;">
+        <header style="background: #FF0000; height: 70px; width: 100%;">
+        </header>
+        <footer style="background: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;">
+            Best School
+        </footer>
+    </body> 
 </html>
