--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -7,7 +7,7 @@
             header {background: #FF0000; height: 70px; width: 100%;}
             footer {background: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center; line-height: 60px;}
         </style>
-        <title>AirBnB clone</title>
+        <title>AirBnB Clone</title>
     </head>
     <body>
         <header></header>
