--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="styles/3-common.css" rel="stylesheet">
+    <link href="styles/4-common.css" rel="stylesheet">
+    <link href="styles/4-filters.css" rel="stylesheet">
     <link href="styles/3-header.css" rel="stylesheet">
     <link href="styles/3-footer.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon"/>
@@ -13,6 +14,11 @@
     <header>
       <a class="logo" href="images/logo.png"></a>
     </header>
+    <div class="container">
+      <section class="filters">
+        <div><button>Search</button></div>
+      </section>
+    </div>
     <footer>
       Best School
     </footer>
