--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -8,10 +8,10 @@
       <title>AirBnB Clone</title>
   </head>
 
-  <body class="common">
-     <header class="header">
+  <body>
+     <header>
     </header>
-    <footer class="footer">
+    <footer>
         School Best
     </footer>
   </body>
