--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,7 +4,7 @@
     <link href="styles/3-common.css" rel="stylesheet">
     <link href="styles/3-header.css" rel="stylesheet">
     <link href="styles/3-footer.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon"/>
+    <link rel="icon" href="images/icon.png" type="image/x-icon"/>
     <meta charset="utf-8">
     <title>AirBnB Clone</title>
   </head>
