--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -7,7 +7,7 @@
     <link href="styles/6-filters.css" rel="stylesheet">
     <link rel="icon" href="images/icon.png" type="image/x-icon"/>
     <meta charset="utf-8">
-    <title>AirBnB clone</title>
+    <title>AirBnB Clone</title>
   </head>
 
   <body>
