--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -8,7 +8,7 @@
     <link href="styles/7-places.css" rel="stylesheet">
     <link rel="icon" href="images/icon.png" type="image/x-icon"/>
     <meta charset="utf-8">
-    <title>AirBnB clone</title>
+    <title>AirBnB Clone</title>
   </head>
 
   <body>
