--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -129,7 +129,7 @@
                 <span>2 Bathrooms</span>
               </div>
             </div>
-            <div class="user"><b>Owner</b>: Betty Holberton</div>
+            <div class="user"><b>Owner</b>: Bill Zuckerberg</div>
             <div class="description">
               Newly renovated spacious 2 bedrooms 2 baths in cozy
               Gastown style unit with the views of North Shore mountains.
